<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_dice_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/textViewResult" />

    <ImageView
        android:id="@+id/imageViewDice1"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/imgDice1"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/imageViewDice2"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/imgDice2"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/dice_1" />

    <EditText
        android:id="@+id/editTextDice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDice1"
        android:inputType="number"
        android:text="6"/>

    <EditText
        android:id="@+id/editTextDice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDice2"
        android:inputType="number"
        android:text="6"/>

    <TextView
        android:id="@+id/textViewEditDice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextDice1"
        app:layout_constraintEnd_toEndOf="@+id/editTextDice1"
        app:layout_constraintStart_toStartOf="@+id/editTextDice1"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:text="@string/editTextDice1"/>

    <TextView
        android:id="@+id/textViewEditDice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDice2"
        app:layout_constraintEnd_toEndOf="@+id/editTextDice2"
        app:layout_constraintStart_toStartOf="@+id/editTextDice2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:text="@string/editTextDice2" />

</androidx.constraintlayout.widget.ConstraintLayout>